# file_traverser

./: Cargo.toml  README.md
src/: lib.rs  traverser.rs
src/channel/: generic_receiver.rs  generic_sender.rs  mod.rs
src/channel/crossbeam/: receiver.rs  sender.rs
src/channel/mpsc/: receiver.rs  sender.rs
