[package]
name = "file_traverser"
authors = ["itsscb <dev@itsscb.de>"]
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
license = "GPL-3.0"
description = "file_traverser is a Rust crate designed for efficient file system traversal. It allows users to recursively explore directories and filter files based on customizable criteria. The crate supports both standard library `mpsc` and `crossbeam` channels through a trait, enabling flexible communication patterns for sending file paths. Ideal for applications that require asynchronous file processing, it combines ease of use with powerful functionality."
repository = "https://github.com/itsscb/file_traverser"
readme = "README.md"

[dependencies]
crossbeam-channel = { version = "0.5.13", optional = true }
rayon = "1.10.0"
tracing = "0.1.40"

[features]
default = []
crossbeam = ["crossbeam-channel"]

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
